--- a/src/input.css
+++ b/src/input.css
@@ -7,7 +7,7 @@
 @tailwind utilities;
 
 body {
-  max-width: 100vw;
+  width: 100%;
   overflow-x: hidden;
 }
 
